# paper-writer

./: main.py  models.yaml  pyproject.toml
paper_writer/: main.py
paper_writer/pipeline/: __init__.py  base.py  citation.py  crawler.py  description.py  outline.py  searcher.py
paper_writer/utils/: cleaner.py  config.py  crawler.py  env.py  model.py  prompts.py  text.py
prompts/: citation_sentence.md  description.md  new_reference.md  outline.md  reference.md  searcher.md
